NOOP: Ensure card expanded title wraps text.

--- a/app/styles/dataCards/cards.sass
+++ b/app/styles/dataCards/cards.sass
@@ -230,6 +230,7 @@ body
             display: inline-block
             opacity: 0
             font-size: inherit
+            white-space: none
             background-color: $card-bg-color
             &:hover
               opacity: 1
